--- a/login-testing-proj/Base.lproj/Main.storyboard
+++ b/login-testing-proj/Base.lproj/Main.storyboard
@@ -60,6 +60,9 @@
                                                 <integer key="value" value="5"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="didTapLoginButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="QTc-DJ-gOR"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
