Renamed "ViewController" to more specific "LoginViewController". Created additional storyboard that is a tab bar with 2 icons ("Inbox" & "New Message"). "Login" view is initial/root storyboard. After login, root view changes to "Inbox" view.

--- a/login-testing-proj/Base.lproj/Main.storyboard
+++ b/login-testing-proj/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JdM-G4-mqs">
+    <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,25 +8,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="login_testing_proj" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" userLabel="Login View Controller" customClass="LoginViewController" customModule="login_testing_proj" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="3Go-ll-o2W">
-                                <rect key="frame" x="40" y="305" width="334" height="286.5"/>
+                                <rect key="frame" x="40" y="278.66666666666663" width="310" height="286.66666666666663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vhx-U3-oHB">
-                                        <rect key="frame" x="93.5" y="0.0" width="147" height="72"/>
+                                        <rect key="frame" x="81.666666666666671" y="0.0" width="146.66666666666663" height="71.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="60"/>
                                         <color key="textColor" red="0.73957615799999998" green="0.61139123480000002" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="f6H-BD-RLi" userLabel="E-mail Text Field">
-                                        <rect key="frame" x="0.0" y="102" width="334" height="39.5"/>
+                                        <rect key="frame" x="0.0" y="101.66666666666663" width="310" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ahc-r2-cO9"/>
                                         </constraints>
@@ -39,7 +39,7 @@
                                         </variation>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="pIf-K9-llA" userLabel="Password Text Field">
-                                        <rect key="frame" x="0.0" y="171.5" width="334" height="40"/>
+                                        <rect key="frame" x="0.0" y="171.66666666666663" width="310" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Kji-DC-8v3"/>
                                         </constraints>
@@ -47,7 +47,7 @@
                                         <textInputTraits key="textInputTraits" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wdb-dG-Hiq">
-                                        <rect key="frame" x="20" y="241.5" width="294" height="45"/>
+                                        <rect key="frame" x="20" y="241.66666666666669" width="270" height="45"/>
                                         <color key="backgroundColor" red="0.74117654560000001" green="0.61176472900000001" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="2Zf-ga-1ZX"/>
@@ -83,6 +83,7 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Go-ll-o2W" secondAttribute="trailing" constant="40" id="vlL-nZ-lcm"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="lGj-Vi-OJb"/>
                     <connections>
                         <outlet property="emailTextField" destination="f6H-BD-RLi" id="aTB-77-zGb"/>
                         <outlet property="passwordTextField" destination="pIf-K9-llA" id="ajQ-pp-PMe"/>
@@ -90,7 +91,73 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="82"/>
+            <point key="canvasLocation" x="-1600" y="-779"/>
+        </scene>
+        <!--New Message Tab-->
+        <scene sceneID="yXR-dS-sab">
+            <objects>
+                <viewController id="2H3-mF-MDD" userLabel="New Message Tab" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yza-4L-K1w">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Wzy-j9-kx4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="New Message" id="kwj-c5-FHk" userLabel="New Message"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="we8-zC-avq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="11" y="-1107"/>
+        </scene>
+        <!--Inbox Tab-->
+        <scene sceneID="1Fe-jF-Twt">
+            <objects>
+                <viewController id="1Iz-Z5-uYF" userLabel="Inbox Tab" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="gff-5y-nAF">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="MbW-gz-1re"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Inbox" id="i7w-SO-kxy" userLabel="Inbox"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mys-hK-lvZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="11" y="-457"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3Xf-OZ-sN8">
+            <objects>
+                <tabBarController storyboardIdentifier="MainTabBarController" id="XNq-gs-A6T" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CnT-A4-Hao">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="1Iz-Z5-uYF" kind="relationship" relationship="viewControllers" id="Dm6-bQ-3k9"/>
+                        <segue destination="2H3-mF-MDD" kind="relationship" relationship="viewControllers" id="HJM-GQ-xo2"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DoA-1G-H9s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-837" y="-779"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FfL-HE-c9l">
+            <objects>
+                <navigationController storyboardIdentifier="LoginNavigationController" id="JdM-G4-mqs" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aCU-cT-xYx">
+                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Tvg-Md-7JU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j75-VH-2LR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2378" y="-779"/>
         </scene>
     </scenes>
     <resources>
